<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grasp_gen_service</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vishwas@todo.todo">vishwas</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>grasp_gen_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>

  <!-- <depend>grconvnet_process</depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
